# mini-open2anth

./: .env  .env.example  .gitignore  BUGFIX.md  BUILD_RELEASE.md  README.md  build.bat  build.ps1  build.sh  build.spec  main.py  pyproject.toml  requirements.txt  start.bat  start.sh  test_client.py
.github/workflows/: build-release.yml
