[project]
name = "mini-open2anth"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.10.11",
    "aiosignal==1.3.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.5.2",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "certifi==2025.11.12",
    "click==8.1.8",
    "colorama==0.4.6",
    "exceptiongroup==1.3.0",
    "fastapi==0.121.2",
    "frozenlist==1.5.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "multidict==6.1.0",
    "propcache==0.2.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "python-dotenv==1.0.1",
    "sniffio==1.3.1",
    "starlette==0.44.0",
    "typing-extensions==4.13.2",
    "uvicorn==0.33.0",
    "yarl==1.15.2",
]
